--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -254,6 +254,7 @@ div#idicontentpages {
     color: #fff;
     text-shadow: none;
 	z-index: 998;
+	
 }
 
 
@@ -271,6 +272,7 @@ div#idicontentpages {
     background-size: cover!important;
 	min-height: 690px!important;
 	max-width: 990px;
+	box-shadow: 6px 7px 19px #ccc;
 }
 
 
@@ -449,12 +451,39 @@ icontent-buttonbar button {
     max-width: 300px!important;
 }
 
+h4#idtitlenotes {
+    font-family: sans-serif;
+    font-size: 15px;
+    font-stretch: normal;
+    font-weight: bold;
+    color: #fff;
+    padding-left: 2.5em;
+    text-indent: -5px;
+}
+
 
 div#idnotesarea {
     position: absolute;
     max-width: 50%;
     z-index: 998;
 }
+
+.path-mod-icontent .questionsarea .titlequestions:hover, .path-mod-icontent .notesarea .titlenotes:hover {
+    color: #000;
+    border-bottom: 1px solid #aaa;
+    background-color: #5cb85c;
+}
+
+
+.path-mod-icontent .notesarea .titlenotes {
+   /* background-color: #5bc0de; */
+	background-color: rgba(17,119,209,.5);
+       
+}
+
+
+
+
 
 div#idfulltab {
     display: flex;
