--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -234,7 +234,7 @@ div#idicontentpages {
 
 .path-mod-icontent .icontent-page .fulltextpage p {
     font-family: verdana;
-    font-size: 16px;
+    font-size: 0.9em;
     text-indent: 1.5em;
     line-height: 1.7em;
     color: #555;
@@ -261,18 +261,20 @@ div#idicontentpages {
 
 
 .path-mod-icontent .icontent-page .fulltextpage {
-	margin: 0 auto;
+    margin: 0 auto;
     font-size: 16px;
     letter-spacing: .1px;
     line-height: 1.8em;
     word-spacing: .3px;
     padding: 16px 42px;
     z-index: 99;
-    background-repeat: no-repeat;
-    background-size: cover!important;
-	min-height: 690px!important;
-	max-width: 990px;
-	box-shadow: 6px 7px 19px #ccc;
+    background-repeat-x: no-repeat;
+    background-size: 990px!important;
+    background-position: center!important;
+    background-repeat-y: repeat!important;
+    /*min-height: 640px!important*/
+    max-width: 990px;
+    box-shadow: 6px 7px 19px #ccc;
 }
 
 
@@ -288,9 +290,35 @@ div#idicontentpages {
     max-height: 358px;
 }*/
 
+
+
+
+
+.fulltextpage.coverpage h1, .fulltextpage.coverpage h2, .fulltextpage.coverpage h3, .fulltextpage.coverpage h4, .fulltextpage.coverpage h5, .fulltextpage.coverpage h6 {
+/*border: solid 1px red;*/
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    margin-top: 0;
+	margin: 0 auto;
+    margin-bottom: .5rem;
+    font-weight: 300;
+    line-height: 1.2;
+    color: inherit;
+}
+.fulltextpage.coverpage p {
+/*border: solid 1px blue;*/
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    margin-top: 0;
+    font-weight: 300;
+    line-height: 1.2;
+    color: inherit;
+}
+
+
+
+
 .contentcoverpage p.read-more-wrap {
 	position: relative;
-    max-height: 256px;
+    max-height: 290px;
     overflow: auto;
 	z-index: 998;
 
@@ -320,7 +348,7 @@ div#idicontentpages {
 }
 .path-mod-icontent .icontent-page .fulltextpage .toolbarpage {
     z-index: 999;
-    padding: 0 1.5em 0.8em;
+   /* padding: 0 1.5em 0.8em;*/
 }
 
 .toolbarpage .icon {
@@ -339,6 +367,14 @@ div#idicontentpages {
 
 /*----Numeração da página----*/
 
+.path-mod-icontent .icontent-page .pagenum {
+   /* position: relative;
+    text-align: right;
+    top: 5px;*/
+    z-index: 998;
+}
+
+
 .path-mod-icontent .icontent-page .pagenum span {
     position: relative;
     margin-right: -17px;
@@ -350,6 +386,7 @@ div#idicontentpages {
     color: #fff;
     top: 80px;
 }
+
 /*----Fim da Numeração da página----*/
 
 /*----Navegação pelas páginas----*/
@@ -429,15 +466,6 @@ icontent-buttonbar button {
 }
 
 /*----Fim de Navegação pelas páginas----*/
-
-/*----Númeração dasPáginas----*/
-.path-mod-icontent .icontent-page .pagenum {
-    position: relative;
-    text-align: right;
-    top: 5px;
-    z-index: 998;
-}
-
 
 
 /*----Área de Perguntas----*/
@@ -604,7 +632,13 @@ em.noteon {
 	font-weight: bold;
 }
 
-
+.page-layout.columns-1 h1, .page-layout.columns-1 h2, .page-layout.columns-1 h3, .page-layout.columns-1 h4, .page-layout.columns-1 h5, .page-layout.columns-1 h6, .page-layout.columns-2 h1, .page-layout.columns-2 h2, .page-layout.columns-2 h3, .page-layout.columns-2 h4, .page-layout.columns-2 h5, .page-layout.columns-2 h6, .page-layout.columns-3 h1, .page-layout.columns-3 h2, .page-layout.columns-3 h3, .page-layout.columns-3 h4, .page-layout.columns-3 h5, .page-layout.columns-3 h6, .page-layout.columns-4 h1, .page-layout.columns-4 h2, .page-layout.columns-4 h3, .page-layout.columns-4 h4, .page-layout.columns-4 h5, .page-layout.columns-4 h6, .page-layout.columns-5 h1, .page-layout.columns-5 h2, .page-layout.columns-5 h3, .page-layout.columns-5 h4, .page-layout.columns-5 h5, .page-layout.columns-5 h6, .page-layout.columns-6 h1, .page-layout.columns-6 h2, .page-layout.columns-6 h3, .page-layout.columns-6 h4, .page-layout.columns-6 h5, .page-layout.columns-6 h6 {
+	/*border: solid 1px green;*/
+	 font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+     font-weight: 500;
+     line-height: 1.2;
+     color: inherit;
+}
 
 
 
@@ -761,19 +795,17 @@ color:#06d5f8!important
 
 
 
-
+/*===========================(  ESTILO RESPONSIVO  )============================*/
 /*===========================(  ESTILO RESPONSIVO  )============================*/
 
 
 
 
-
-/*-------------------------------Orientação Retrato----------*/
-
+/*=====(  Orientação Retrato  )=================================================*/
 
 
 /*------largura até 600px na orientação retrato----*/
-@media only screen and (max-width: 600px), screen and (orientation: portrait) {  
+@media only screen and (max-width: 425px), screen and (orientation: portrait) {  
 	
 	header#page-header {
     display: none;
@@ -802,7 +834,7 @@ color:#06d5f8!important
 		
 
 	.fulltextpage.coverpage {
-    max-height: 525px;
+    height: 560px;
 }
 	
 	.path-mod-icontent .headercoverpage {
@@ -825,7 +857,7 @@ color:#06d5f8!important
 	
 	.path-mod-icontent .icontent-page .fulltextpage {
    /*padding: inherit!important;*/
-  		 min-height: inherit!important;
+  		/* min-height: inherit!important;*/
 		 /*margin-top: 28%!important;*/
 		padding: 16px 15px!important;
 		
@@ -861,7 +893,8 @@ color:#06d5f8!important
 	}
 	
 	.path-mod-icontent .headercoverpage, .path-mod-icontent .contentcoverpage {
-    width: 100%!important;
+		font-size: 0.8em!important;
+    	width: 100%!important;
     }
 	
 	.path-mod-icontent .contentcoverpage {
@@ -909,13 +942,17 @@ color:#06d5f8!important
 .progress {
     display:none!important;
 }	
-	.path-mod-icontent .icontent-page .pagenum  {
-		top: 8px!important;
-		
-	}
+
+/*----Numeração da página na orientação retrato largura até 600px----*/	
 	
-	.path-mod-icontent .icontent-page .pagenum span {
-   top: 0px!important;
+.path-mod-icontent .icontent-page .pagenum span {
+    display: flex;
+    position: absolute;
+    padding: 5px 45px;
+    font-size: 11px;
+    top: 490px!important;
+    text-align: center;
+    left: 38.25%;
 }
 	
 	
@@ -966,7 +1003,274 @@ div#idtabicontent {
 
 
 
-/*-------------------------------Orientação Paisagem----*/
+
+/*------largura até 320px na orientação retrato----*/
+@media only screen and (max-width: 320px), screen and (orientation: portrait) {  
+	
+	/*header#page-header {
+    display: none;
+}*/
+	
+	/*#maincontent h2 {
+    border: solid 1px red!important;
+}*/
+	
+	/*#region-main>.card, #page-enrol-users #region-main>#filterform, .que #region-main>.history, .userprofile .profile_tree #region-main>section, #region-main>.groupinfobox, #region-main>.well {
+    overflow: initial;
+	}*/
+	
+
+	/*.card-body {
+    padding: 0!important;
+}*/
+	
+	/*section.agrupar {
+	border:solid 1px #5E00D3;
+    position: absolute!important;
+	top:0;
+    width: 100%!important;
+    margin: 0 auto!important;
+    padding-bottom: 2.5em!important;
+}*/
+	
+	div#idicontentpages {
+    /*border: solid 1px green;*/
+    position: absolute;
+    top: 0;
+    width: 100%;
+}	
+	
+	span#maincontent {
+    display: none!important;
+}
+
+	.fulltextpage.coverpage {
+    height: 560px;
+}
+	
+	.path-mod-icontent .headercoverpage {
+    padding: unset;
+	}
+	
+	.path-mod-icontent .icontent-page .row {
+    padding: 0 25%!important;
+    text-align: center!important;
+}
+
+
+	
+.path-mod-icontent .full-paging-buttonbar {
+	display:none!important;
+	
+	
+	
+	}
+	
+	.path-mod-icontent .icontent-page .fulltextpage {
+   /*padding: inherit!important;*/
+  		 height: 560px!important;
+		 /*margin-top: 28%!important;*/
+		padding: 16px 15px!important;
+		
+}
+	
+	
+
+	
+.path-mod-icontent .icontent-page .fulltextpage p {
+   padding: 0 5px!important;
+    font-size: 0.9em!important;
+    line-height: 1.5em;
+	
+}	
+	
+	.path-mod-icontent .icontent-page .fulltextpage .toolbarpage {
+	position:relative;
+	top: -31px!important;
+    padding-right: 25px!important;
+}
+
+.path-mod-icontent .icontent-page .fulltextpage .toolbarpage .icon {
+    font-size: 12px;
+	}
+	
+.toolbarpage .icon:hover {
+    color: #add!important;
+}
+	
+
+	.path-mod-icontent .icontent-page .fulltextpage h3.pagetitle{
+	position: relative;
+    top: -21px!important;
+	font-size: 16px!important;
+		padding-top: 2px;
+	}
+	
+	.path-mod-icontent .headercoverpage, .path-mod-icontent .contentcoverpage {
+    width: 100%!important;
+    }
+	
+	.path-mod-icontent .contentcoverpage {
+	padding: 1em 0.5em!important;
+    
+}
+	
+		
+	
+/*----Área de texto na orientação retrato largura até 320px----*/
+
+	
+/*.page-layout.columns-1, .page-layout.columns-2, .page-layout.columns-3, .page-layout.columns-4, .page-layout.columns-5 {
+    min-height: 421px!important;
+    max-height: 422px!important;
+    overflow: auto!important;
+    z-index: 998!important;
+}*/
+	
+	.page-layout.columns-1, .page-layout.columns-2, .page-layout.columns-3, .page-layout.columns-4, .page-layout.columns-5 {
+		position: relative;
+		top:-35px;
+		width: 103%;
+    -webkit-columns: auto!important;
+    -moz-columns: auto!important;
+    columns: auto!important;
+    min-height: 385px!important;
+    max-height: 410px!important;
+		overflow-x: hidden!important;
+    /*overflow-y: -webkit-paged-y!important;
+    overflow-x: hidden!important;*/
+    z-index: 998!important;
+		display: inline-block;
+		image-resolution:snap!important;
+		/*background-color: #ffffff5c;*/
+}
+	
+.path-mod-icontent .icontent-page .fulltextpage {
+      background-position: center!important;
+}	
+	
+	
+	
+	
+/*----Fim da Área de texto na orientação retrato largura até 320px ----*/	
+	
+	
+/*----Avançar e voltar na orientação retrato largura até 320px----*/		
+	
+	div#fgroup_id_buttonar {
+    top: 495px!important;
+    
+}
+	
+/*----Fim de Avançar e voltar na orientação retrato largura até 320px----*/
+	
+	
+	
+	
+
+	
+.progress {
+    display:none!important;
+}	
+/*----Numeração da página na orientação retrato largura até 320px----*/	
+	
+.path-mod-icontent .icontent-page .pagenum span {
+    display: flex;
+    position: absolute;
+    padding: 5px 45px;
+    font-size: 11px;
+    top: 505px!important;
+    text-align: center;
+    left: 26.25%;
+}
+	.path-mod-icontent .icontent-page .pagenum span em {
+    font-style: normal;
+		padding-left: 0.3em;
+    font-size: 12px;
+}
+	
+	
+/*----Área de Perguntas na orientação retrato largura até 320px----*/
+	
+	div#idnotesarea {
+		/*position:absolute!important;
+    	min-width: 300px!important;
+   		 z-index: 998!important;
+    	left: 10px!important;*/
+    	top: 572px!important;
+}
+	
+		
+	div#idfulltab {
+    padding: 0.1em;
+    border-radius: 0 0 20px 20px;
+    /*width: 550px;*/
+}	
+
+div#idtabicontent {
+    width: 100%!important;
+}
+	
+	
+	
+	
+.path-mod-icontent .icontent-page .notesarea .notelist .pagenoterow {
+    background-color: #fff;
+    border-bottom: 1px solid #eee;
+    border-radius: 5px;
+    margin-top: 10px;
+    padding: 5px 0px 30px 6px!important;
+}	
+.path-mod-icontent .notesarea #note .fields span {
+    margin-right: 1.0em;
+}
+	
+/*----Fim da Área de Perguntas na orientação retrato largura até 320px----*/	
+	
+	
+	#fgroup_id_buttonar .btn-previous-page, #fgroup_id_buttonar .btn-next-page {
+
+    z-index: 999!important;
+}
+
+	
+/*************************mudar barra de rolagem orientação retrato 320px**************************/
+.fulltextpage ::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+  -webkit-border-radius: 6px;
+}
+ 
+.fulltextpage ::-webkit-scrollbar-track-piece {
+  background-color: #eee;
+  -webkit-border-radius: 0px;
+}
+ 
+.fulltextpage ::-webkit-scrollbar-thumb:vertical {
+  height: 5px;
+  background-color: #666;
+  -webkit-border-radius: 6px;
+}
+ 
+.fulltextpage ::-webkit-scrollbar-thumb:horizontal {
+  width: 6px;
+  background-color: #666;
+  -webkit-border-radius: 6px;
+}
+
+/************************* fim de mudar barra de rolagem**************************/
+	
+	
+	
+	
+	
+	
+	
+}/*------Fim da largura até 320px Retrato ----*/
+
+
+
+/*=====(  Orientação Paisagem  )=================================================*/
 
 
 /* Smartphones (landscape) ----------- */
