--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -1078,7 +1078,7 @@ div#idtabicontent {
 
 	
 .path-mod-icontent .icontent-page .fulltextpage p {
-   padding: 0 5px!important;
+   padding: 0px 15px 0px 0px!important;
     font-size: 0.9em!important;
     line-height: 1.5em;
 	
