--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -367,7 +367,8 @@ div#idicontentpages {
     text-align: right;
     top: 5px;*/
 	top:520px;
-    z-index: 998;
+    /*z-index: 998;*/
+	z-index: auto;
 	
 }
 
@@ -1205,6 +1206,7 @@ div#idtabicontent {
 		min-width: 254px!important;
     	top: 600px!important;
 		margin: 0 auto!important;
+		z-index: auto!important;
 	}
 	
 		
@@ -1237,7 +1239,8 @@ div#idtabicontent {
 	
 	#fgroup_id_buttonar .btn-previous-page, #fgroup_id_buttonar .btn-next-page {
 
-    z-index: 999!important;
+    /*z-index: 999!important;*/
+		z-index: auto!important;
 }
 
 	
