--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -1078,7 +1078,7 @@ div#idtabicontent {
 
 	
 .path-mod-icontent .icontent-page .fulltextpage p {
-   padding: 0px 9px 0px 0px!important;
+   /*padding: 0px 9px 0px 0px!important;*/
     font-size: 0.9em!important;
     line-height: 1.5em;
 	
@@ -1104,7 +1104,7 @@ div#idtabicontent {
 
 	.path-mod-icontent .icontent-page .fulltextpage h3.pagetitle{
     position: relative;
-    top: -58px!important;
+    top: -50px!important;
     font-size: 16px!important;
     padding-top: 2px;
 }
