--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -542,8 +542,11 @@ div#idtabicontent {
 }
 
 textarea#idcommentnote, textarea#idcommentdoubt {
-    min-width: 96%;
-    max-width: 98%;
+   /* min-width: 96%;
+    max-width: 98%;*/
+	min-height: 120px;
+    height: auto;
+    border-radius: 5px;
 }
 
 .notecomment {
@@ -1211,10 +1214,12 @@ div#idtabicontent {
 	
 		
 	div#idfulltab {
+	border-radius: 0 0 20px 20px;
+	font-size: 13px;
     padding: 0.1em;
-    border-radius: 0 0 20px 20px;
-		width: 95%;
-    /*width: 550px;*/
+    width: 95%;
+    width: 250px;
+	line-height: 1.4;
 }	
 
 div#idtabicontent {
