--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -394,7 +394,8 @@ div#idicontentpages {
     text-align: center!important;
     position: relative!important;
     margin: 0 auto!important;
-    z-index: 997!important;
+    /*z-index: 997!important;*/
+	z-index: auto!important;
     max-width: 44%!important;
     /*border: solid 1px red;*/
     display: flex!important;
@@ -491,7 +492,8 @@ h4#idtitlenotes {
 div#idnotesarea {
     position: absolute;
     max-width: 50%;
-    z-index: 998;
+    /*z-index: 998;*/
+	z-index: auto;
 }
 
 .path-mod-icontent .questionsarea .titlequestions:hover, .path-mod-icontent .notesarea .titlenotes:hover {
