--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -1092,9 +1092,10 @@ div#idtabicontent {
 .path-mod-icontent .icontent-page .fulltextpage .toolbarpage {
     position: relative;
     top: -40px!important;
-    padding: 0 25px 0 95px;
+    /*padding: 0 25px 0 95px;*/
     /* padding-right: 25px!important; */
     display: inherit;
+	justify-content: flex-end;
 }
 	
 	
