comentado o top do elemento .pagenum e colocado o top em seu elemento filho <span>

--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -384,7 +384,7 @@ div#idicontentpages {
     font-size: 12px;
     background-color: rgba(17,119,209,.5);
     color: #fff;
-    /*top: 80px;*/
+    top: 810px;
 }
 
 /*----Fim da Numeração da página----*/
