ajuste do padding no body para o estilo na orientação retrato até 320px

--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -1041,6 +1041,10 @@ div#idtabicontent {
     margin: 0 auto!important;
     padding-bottom: 2.5em!important;
 }*/
+	body {
+    padding-left: 5px;
+    padding-right: 5px;
+}
 	
 	div#idicontentpages {
     /*border: solid 1px green;*/
