--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -1042,8 +1042,8 @@ div#idtabicontent {
     padding-bottom: 2.5em!important;
 }*/
 	body {
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 5px!important;
+    padding-right: 5px!important;
 }
 	
 	div#idicontentpages {
