ajuste do margin no #header para o estilo na orientação retrato até 320px

--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -1045,6 +1045,10 @@ div#idtabicontent {
     padding-left: 5px!important;
     padding-right: 5px!important;
 }
+	#header {
+    margin-right: inherit!important;
+    margin-left: inherit!important;
+}
 	
 	div#idicontentpages {
     /*border: solid 1px green;*/
