--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -1049,6 +1049,10 @@ div#idtabicontent {
     margin-right: inherit!important;
     margin-left: inherit!important;
 }
+	#footer {
+    margin-right: inherit!important;
+    margin-left: inherit!important;
+}
 	
 	div#idicontentpages {
     /*border: solid 1px green;*/
