--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -1055,11 +1055,11 @@ div#idtabicontent {
 }
 	.container-fluid {
     width: 100%;
-    padding-right: inherit!important;
-    padding-left: inherit!important;
+    padding-right: 0px!important;
+    padding-left: 0px!important;
 }
 	div#region-main-box {
-    padding: 0!important;
+    padding: 0px!important;
 }
 	.row {
     margin-right: 0px!important;
@@ -1069,7 +1069,7 @@ div#idtabicontent {
 	div#idicontentpages {
     /*border: solid 1px green;*/
 	position: relative;
-    top: 0;
+    top: 0px;
     width: 100%;
 }	
 	
