início do estilo na orientação landscape de 600px até 800px

--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -1362,7 +1362,7 @@ and (min-width : 321px) {
 	.row {
     margin-right: 0px!important;
     margin-left: 0px!important;
-}''
+}
 	
 	div#idicontentpages {
     /*border: solid 1px green;*/
