--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -231,6 +231,7 @@ div#idicontentpages {
 
 #cor_padrao {
     display: inline-grid;
+	margin: 0 14px 0 0;
     /* border: solid 1px yellow; */
 }
 
@@ -252,8 +253,9 @@ div#idicontentpages {
 
 .fulltextpage p a {
     position: relative;
-    display: inline-block;
-	
+    display: block;
+	width: auto;
+	height: auto;
 }
 
 
@@ -1118,7 +1120,7 @@ div#idtabicontent {
 
 	
 .path-mod-icontent .icontent-page .fulltextpage p {
-   /*padding: 0px 9px 0px 0px!important;*/
+   padding: 0px 20px 0px 0px!important;
     font-size: 0.9em!important;
     line-height: 1.5em;
 	
