--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -277,6 +277,14 @@ div#idicontentpages {
 }
 
 
+.path-mod-icontent .icontent-page .fulltextpage img {
+    margin-right: 10px;
+    display: flex;
+    max-height: 90%;
+    width: auto;
+    max-width: 69%;
+    margin: 0 auto;
+}
 
 
 
