--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -1128,7 +1128,7 @@ div#idtabicontent {
 
 	
 .path-mod-icontent .icontent-page .fulltextpage p {
-   padding: 0px 20px 0px 0px!important;
+   /*padding: 0px 20px 0px 0px!important;*/
     font-size: 0.9em!important;
     line-height: 1.5em;
 	
