--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -229,6 +229,14 @@ div#idicontentpages {
 	/* border: solid 1px red; */
 }
 
+
+.path-mod-icontent .icontent-page .fulltextpage li {
+    /* border: solid 1px red; */
+    margin: 15px;
+}
+
+
+
 #cor_padrao {
     display: inline-grid;
 	margin: 0 14px 0 0;
@@ -938,11 +946,12 @@ color:#06d5f8!important
     height: 415px!important;
     overflow: auto!important;
     z-index: 998!important;
+	width: 95%;
+	margin: 0 auto;
+
 }
 	
-	
-	
-	
+		
 	
 	
 	
@@ -1133,6 +1142,9 @@ div#idtabicontent {
     line-height: 1.5em;
 	
 }	
+	
+	
+	
 	
 .path-mod-icontent .icontent-page .fulltextpage .toolbarpage {
     position: relative;
