reducão do tamanho em porcentagem para o container de vídeo para a área de texto quando em uma só coluna

--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -784,6 +784,13 @@ color:#06d5f8!important
     
 }
 
+.page-layout.columns-1 video {
+    width: 70%;
+}
+
+
+
+
 /************Fim do Estilo para o Container de Vídeo *****************/
 
 
